--- a/README
+++ b/README
@@ -1,18 +1,30 @@
-Linux kernel
-============
+This is a personal fork of:
+git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git
+including some various patches on top.  I try to keep it tracking the
+most recent stable version availible there, although it may lag behind
+at times.  This tree gets rebased each time I update to the newest
+stable version.
 
-There are several guides for kernel developers and users. These guides can
-be rendered in a number of formats, like HTML and PDF. Please read
-Documentation/admin-guide/README.rst first.
+It includes the following changes from upstream:
+ * Re-enabled the ability to use the EFI RTC driver on x86, while some
+   systems do have issues with it, there are many in the wild that it
+   works just fine on.
+ * Removed the Intel RAPL dependency on IOSF_MBI, as this is only really
+   a dependency for SoC platforms.
+ * Changed the mount syscall so it defaults to 'noatime' instead of
+   'relatime', almsot nothing uses atime anymore, the way it's implemented
+   in almost all operating systems is inherently flawed for the original
+   intended usage, and the people who do should probably be using
+   strictatime anyway.
+ * Changed the default symlink, hardlink, and FIFO protections back
+   to being secure.  We should be secure by default, not the other
+   way around.
+ * Changed the default VT color palette to be brighter and have a less
+   ugly dark yellow.
+ * Added a custom localversion file to differentiate from upstream.
 
-In order to build the documentation, use ``make htmldocs`` or
-``make pdfdocs``.  The formatted documentation can also be read online at:
+If/when any of the above ever get's merged into the mainline kernel,
+I will drop it from here.
 
-    https://www.kernel.org/doc/html/latest/
-
-There are various text files in the Documentation/ subdirectory,
-several of them using the Restructured Text markup notation.
-
-Please read the Documentation/process/changes.rst file, as it contains the
-requirements for building and running the kernel, and information about
-the problems which may result by upgrading your kernel.
+The upstream README file can now be found in
+Documentation/admin-guide/README.rst
